# bevy_ratatui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml  test.yml
custom_soft_backend_demo/: Cargo.toml
custom_soft_backend_demo/src/: main.rs
examples/: bevy_keys.rs  demo.rs  hello_world.rs  kitty.rs  mouse.rs
examples/snake/: README.md  controls.rs  game.rs  game_loop.rs  geometry.rs  hud.rs  main.rs  playfield.rs  snake.rs  snake_rendering.rs  terminal.rs  terminal_cells.rs
src/: context_trait.rs  lib.rs  ratatui_context.rs  ratatui_plugin.rs
src/crossterm_context/: cleanup.rs  context.rs  error.rs  event.rs  kitty.rs
src/crossterm_context/translation/: keyboard_translation.rs
src/windowed_context/: context.rs  plugin.rs
